creation of consumption database in brightway format

--- a/extract_consumption_vector.ipynb
+++ b/extract_consumption_vector.ipynb
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -57,7 +57,7 @@
        "'/Users/akim/Library/Application Support/Brightway3/GSA-for-ecoinvent.34cad902cfa956f8f1e5e24776ceebde'"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,17 +101,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Biosphere database already present!!! No setup is needed\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "bw.bw2setup()"
    ]
@@ -125,17 +117,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ecoinvent 3.3 cutoff database already present!!! No import is needed\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "ei_name = \"ecoinvent 3.3 cutoff\"  \n",
     "if ei_name in bw.databases:\n",
@@ -149,17 +133,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ecoinvent 3.3 cutoff database already present!!! No import is needed\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "if ei_name in bw.databases:\n",
     "    print(ei_name + \" database already present!!! No import is needed\")\n",
@@ -176,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,17 +162,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "EXIOBASE 2.2 database already present!!! No import is needed\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "ex_name = 'EXIOBASE 2.2'\n",
     "if ex_name in bw.databases:\n",
@@ -208,17 +176,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "EXIOBASE 2.2 database already present!!! No import is needed\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "if ex_name in bw.databases:\n",
     "    print(ex_name + \" database already present!!! No import is needed\")\n",
@@ -236,17 +196,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Agribalyse 1.2 database already present!!! No import is needed\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "ag_name = 'Agribalyse 1.2'\n",
     "if ag_name in bw.databases:\n",
@@ -259,17 +211,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Agribalyse 1.2 database already present!!! No import is needed\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "if ag_name in bw.databases:\n",
     "    print(ag_name + \" database already present!!! No import is needed\")\n",
@@ -339,17 +283,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Agribalyse 1.2 database already present!!! No import is needed\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "if ag_name in bw.databases:\n",
     "    print(ag_name + \" database already present!!! No import is needed\")\n",
@@ -365,25 +301,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### TODO -> ask Andi for files"
+   ]
   },
   {
    "cell_type": "code",
@@ -393,41 +315,6 @@
    "source": [
     "bw.databases"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -852,17 +739,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "act = bw.Database('biosphere3').random()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'categories': ('air', 'low population density, long-term'),\n",
+       " 'code': 'd482b568-0604-4433-87b2-1340f7a17512',\n",
+       " 'name': 'Methanol',\n",
+       " 'database': 'biosphere3',\n",
+       " 'unit': 'kilogram',\n",
+       " 'type': 'emission'}"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "act.as_dict()"
+   ]
   },
   {
    "cell_type": "code",
