--- a/create_consumption_database.ipynb
+++ b/create_consumption_database.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,76 +18,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Read data\n",
-    "Excel sheet can be obtained from https://doi.org/10.1021/acs.est.8b01452"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "path = 'data/es8b01452_si_002.xlsx'\n",
-    "sheet_name = 'Overview & LCA-Modeling'\n",
-    "df_raw = pd.read_excel(path, sheet_name = sheet_name, header=2)"
+    "# Comments to the following code\n",
+    "> - ### Raw data: Excel sheet can be obtained from https://doi.org/10.1021/acs.est.8b01452\n",
+    "> - ### Terms `exchange` and `input activity` are used interchangeably"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Add missing On columns"
+    "# Define constants"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def complete_columns(df):\n",
-    "    \n",
-    "    column_names = list(df.columns)\n",
-    "    indices = [i for i,el in enumerate(column_names)  if 'Activity' in el]\n",
-    "    column_names_complete = copy(column_names)\n",
-    "\n",
-    "    n_el_added = 0\n",
-    "    for ind in indices:\n",
-    "        if 'On' not in column_names[ind-1]:\n",
-    "            act_name = column_names[ind]\n",
-    "            act_number = act_name[act_name.find(' ')+1:]\n",
-    "            column_names_complete.insert(ind+n_el_added, 'On ' + act_number)\n",
-    "            n_el_added += 1\n",
-    "        \n",
-    "    df.columns = column_names_complete[:len(column_names)]\n",
-    "    \n",
-    "    return df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = complete_columns(df_raw)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Convert data to brightway database format"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Constants\n",
     "# Number of relevant columns in the raw file (df_raw) to extract info about activity\n",
     "N_ACT_RELEVANT = 11\n",
     "# Index of the column where activities start\n",
@@ -112,13 +60,45 @@
     "ACTIVITY_TYPE_DICT = {\n",
     "    'process': 'technosphere',\n",
     "    'emission': 'biosphere',\n",
-    "}\n",
-    "\n"
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Convert data to brightway database format -> all functions"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Add missing On columns\n",
+    "def complete_columns(df):\n",
+    "    \n",
+    "    column_names = list(df.columns)\n",
+    "    indices = [i for i,el in enumerate(column_names)  if 'Activity' in el]\n",
+    "    column_names_complete = copy(column_names)\n",
+    "\n",
+    "    n_el_added = 0\n",
+    "    for ind in indices:\n",
+    "        if 'On' not in column_names[ind-1]:\n",
+    "            act_name = column_names[ind]\n",
+    "            act_number = act_name[act_name.find(' ')+1:]\n",
+    "            column_names_complete.insert(ind+n_el_added, 'On ' + act_number)\n",
+    "            n_el_added += 1\n",
+    "        \n",
+    "    df.columns = column_names_complete[:len(column_names)]\n",
+    "    \n",
+    "    return df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,11 +113,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "def compute_act_unit(df):\n",
+    "    '''\n",
+    "    Depending on whether `Quantity code` is present for a specific activity, \n",
+    "    set unit to the unit of the first input activity or CHF.\n",
+    "    '''\n",
     "    if 'Quantity code' in df.keys():\n",
     "        return df['DB Act 1'].split('(')[1].split(',')[0]\n",
     "    else:\n",
@@ -146,13 +130,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "def append_activity(df, df_ind):\n",
     "    '''\n",
-    "    Append activity to the dataframe df in the brightway format\n",
+    "    Append activity from row df_ind to the dataframe df in the brightway format\n",
     "    '''\n",
     "    # Append empty row\n",
     "    df = df.append(pd.Series(), ignore_index=True)\n",
@@ -182,11 +166,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "def add_exchanges_column_names(df):\n",
+    "    '''\n",
+    "    Add column names for exchanges\n",
+    "    '''\n",
     "    col_names = list(EXC_COLUMNS_DICT.keys())\n",
     "    col_excel_literal = [EXC_COLUMNS_DICT[k] for k in col_names]\n",
     "\n",
@@ -197,11 +184,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "def is_pattern_correct(df_ind_j):\n",
+    "    '''\n",
+    "    Check that input activity info has correct pattern. \n",
+    "    In case the pattern is not correct, move on to the next 5 columns and check their pattern.\n",
+    "    This is needed because for some input activities some relevant values are missing, eg only 'On' value is present.\n",
+    "    '''\n",
     "    list_ = list(df_ind_j.index)\n",
     "    pattern = ['On', 'Activity', 'DB Act', 'CFL Act', 'Amount Act']\n",
     "    check = [pattern[n] in list_[n] for n in range(N_COLUMNS_INPUT_ACTIVITY)]\n",
@@ -213,11 +205,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "def add_exchanges(df, df_ind):\n",
+    "    '''\n",
+    "    Add all exchanges (input activities) from the row df_ind to consumption database dataframe.\n",
+    "    '''\n",
     "    # Add exchanges column names\n",
     "    df = add_exchanges_column_names(df)\n",
     "    \n",
@@ -255,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -279,14 +274,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "def append_exchange(df, df_ind_j, ConversionDem2FU):\n",
     "    '''\n",
-    "    Note that we use terms `exchange` and `input activity` interchangeably.\n",
-    "    Extract information about the input activity, eg name, unit, location, etc\n",
+    "    Extract information about one input activity, eg name, unit, location, etc and append it to the dataframe df.\n",
     "    '''    \n",
     "    # Extract the activity number\n",
     "    k = int(''.join(c for c in df_ind_j.index[0] if c.isdigit()))\n",
@@ -352,31 +346,39 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Main code"
+    "# Convert data to brightway database format -> main code\n",
+    "calls all the functions used above"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "project = 'GSA for ecoinvent'\n",
-    "bw.projects.set_current(project)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "smth is not right with exchanges of Activity -> Pasta products\n"
+     ]
+    }
+   ],
    "source": [
     "# Start brightway project that already contains databases\n",
     "project = 'GSA for ecoinvent'\n",
     "bw.projects.set_current(project)\n",
     "\n",
+    "# Create dataframe that will be our consumption database after we add activities and exchanges from the raw file\n",
     "consumption_db_name = 'CH consumption 1.0'\n",
     "df_bw = create_df_bw(consumption_db_name)\n",
+    "\n",
+    "# Read data\n",
+    "path = 'data/es8b01452_si_002.xlsx'\n",
+    "sheet_name = 'Overview & LCA-Modeling'\n",
+    "df_raw = pd.read_excel(path, sheet_name = sheet_name, header=2)\n",
+    "\n",
+    "# Add ON columns\n",
+    "df = complete_columns(df_raw)\n",
     "\n",
     "act_indices = df_raw.index[df_raw['ConversionDem2FU'].notna()].tolist() # indices of all activities\n",
     "\n",
@@ -392,16 +394,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Write the dataframe to excel file\n",
     "write_dir_name = 'write_files'\n",
     "if not os.path.exists(write_dir_name):\n",
     "    os.mkdir(write_dir_name)\n",
     "db_bw_path = write_dir_name + '/' + 'consumption_db.xlsx'\n",
     "df_bw.to_excel(db_bw_path, index=False, header=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Remove HEIA database for now"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Import consumption database"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Replace names of old databases with the new ones in consumption_db.xlsx"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "code",
