--- a/import_all_databases.ipynb
+++ b/import_all_databases.ipynb
@@ -32,7 +32,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "project = 'GSA for ecoinvent'"
+    "project = 'GSA for ecoinvent'\n",
+    "# project = 'exiobase_industry_workaround'"
    ]
   },
   {
@@ -51,7 +52,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "bw.projects"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -936,7 +939,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
