--- a/create_consumption_database.ipynb
+++ b/create_consumption_database.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,6 +29,15 @@
     "import os\n",
     "import re\n",
     "import brightway2 as bw"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bw.projects.set_current('GSA for ecoinvent')"
    ]
   },
   {
