--- a/import_all_databases.ipynb
+++ b/import_all_databases.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,32 +28,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "project = 'GSA for ecoinvent'\n",
+    "bw.projects.set_current(project)\n",
     "# project = 'exiobase_industry_workaround'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "if project in bw.projects:\n",
-    "    bw.projects.delete_project(project, delete_dir=True)\n",
-    "bw.projects.set_current(project)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "bw.projects"
    ]
   },
   {
@@ -925,9 +906,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [conda env:bw]",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-bw-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -939,7 +920,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
