added uncertainty distributions check in agribalyse

--- a/import_all_databases.ipynb
+++ b/import_all_databases.ipynb
@@ -2,14 +2,28 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import brightway2 as bw\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "from copy import copy"
+    "from copy import copy\n",
+    "\n",
+    "#Local files\n",
+    "import json, os"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('global_settings.json', 'rb') as f:\n",
+    "    settings = json.load(f)\n",
+    "which_pc = settings['which_pc']"
    ]
   },
   {
@@ -28,13 +42,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "project = 'GSA for ecoinvent'\n",
-    "bw.projects.set_current(project)\n",
-    "# project = 'exiobase_industry_workaround'"
+    "bw.projects.set_current(project)"
    ]
   },
   {
@@ -58,24 +71,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Older databases\n",
-    "ei33_path = '/Users/akim/Documents/LCA files/ecoinvent 3.3 cutoff/datasets'  \n",
-    "ex22_path = '/Users/akim/Documents/LCA files/exiobase 2.2/mrIOT_IxI_fpa_coefficient_version2.2.2'\n",
-    "ag12_path = '/Users/akim/Documents/LCA files/agribalyse 1.2/AGRIBALYSEv1.2_Complete.xml'\n",
-    "\n",
-    "# Newer databases\n",
-    "ei36_path = '/Users/akim/Documents/LCA files/ecoinvent 3.6 cutoff/datasets'  \n",
-    "# ex34_path = '/Users/akim/Documents/LCA files/exiobase 3.4/IOT_2011_pxp/' #TODO\n",
-    "ag13_path = '/Users/akim/Documents/LCA files/agribalyse 1.3/Agribalyse CSV FINAL_no links_Nov2016v3.CSV'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "bw.databases"
+    "if which_pc == 'local':\n",
+    "    # Older databases\n",
+    "    ei33_path = '/Users/akim/Documents/LCA files/ecoinvent 3.3 cutoff/datasets'  \n",
+    "    ex22_path = '/Users/akim/Documents/LCA files/exiobase 2.2/mrIOT_IxI_fpa_coefficient_version2.2.2'\n",
+    "    ag12_path = '/Users/akim/Documents/LCA files/agribalyse 1.2/AGRIBALYSEv1.2_Complete.xml'\n",
+    "    # Newer databases\n",
+    "    ei36_path = '/Users/akim/Documents/LCA files/ecoinvent 3.6 cutoff/datasets'  \n",
+    "    # ex34_path = '/Users/akim/Documents/LCA files/exiobase 3.4/IOT_2011_pxp/' #TODO\n",
+    "    ag13_path = '/Users/akim/Documents/LCA files/agribalyse 1.3/Agribalyse CSV FINAL_no links_Nov2016v3.CSV'\n",
+    "elif which_pc == 'merlin':\n",
+    "    ex22_path = '/data/user/kim_a/LCA_files/exiobase_22/mrIOT_IxI_fpa_coefficient_version2.2.2'\n",
+    "    ei33_path = '/data/user/kim_a/LCA_files/ecoinvent_33_cutoff/datasets'  \n",
+    "    ei36_path = '/data/user/kim_a/LCA_files/ecoinvent_36_cutoff/datasets'  \n",
+    "    ag13_path = '/data/user/kim_a/LCA_files/agribalyse_13/Agribalyse CSV FINAL_no links_Nov2016v3.CSV'"
    ]
   },
   {
@@ -143,7 +152,7 @@
    "outputs": [],
    "source": [
     "# 2. Exiobase \n",
-    "from bw2io.importers.exiobase import Exiobase22Importer"
+    "from bw2io.importers.exiobase2 import Exiobase22Importer"
    ]
   },
   {
@@ -358,13 +367,6 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "bw.databases"
    ]
@@ -484,6 +486,7 @@
     "                'reference product': 'steam, in chemical industry',\n",
     "                'unit': 'kilogram',\n",
     "                'multiplier': 1/2.75, # change of units, see comment on this activity in ecoinvent\n",
+    "                # TODO does this multiplier also change uncertainty distribution??\n",
     "            }\n",
     "        ),\n",
     "        (\n",
@@ -673,6 +676,47 @@
    "outputs": [],
    "source": [
     "agg.statistics()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Change uncertainty info\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import stats_arrays as sa"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "changed = []\n",
+    "for i,act in enumerate(agg.data):\n",
+    "    excs = act.get('exchanges', [])\n",
+    "    for j,exc in enumerate(excs):\n",
+    "        if exc.get('uncertainty type', False) == sa.LognormalUncertainty.id and \\\n",
+    "        np.allclose(exc.get('amount'), exc.get('loc')):\n",
+    "            exc.update(loc=np.log(exc['amount']))\n",
+    "            changed.append([i,j])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "assert len(changed)==319"
    ]
   },
   {
@@ -906,9 +950,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:bw]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-bw-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -920,7 +964,36 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.7.4"
+  },
+  "varInspector": {
+   "cols": {
+    "lenName": 16,
+    "lenType": 16,
+    "lenVar": 40
+   },
+   "kernels_config": {
+    "python": {
+     "delete_cmd_postfix": "",
+     "delete_cmd_prefix": "del ",
+     "library": "var_list.py",
+     "varRefreshCmd": "print(var_dic_list())"
+    },
+    "r": {
+     "delete_cmd_postfix": ") ",
+     "delete_cmd_prefix": "rm(",
+     "library": "var_list.r",
+     "varRefreshCmd": "cat(var_dic_list()) "
+    }
+   },
+   "types_to_exclude": [
+    "module",
+    "function",
+    "builtin_function_or_method",
+    "instance",
+    "_Feature"
+   ],
+   "window_display": false
   }
  },
  "nbformat": 4,
