--- a/create_consumption_database.ipynb
+++ b/create_consumption_database.ipynb
@@ -7,7 +7,8 @@
     "# Comments to the following code\n",
     "> - #### Parts 1 and 2 can be run separately\n",
     "> - #### Raw data: Excel sheet can be obtained from https://doi.org/10.1021/acs.est.8b01452\n",
-    "> - #### Terms `exchange` and `input activity` are used interchangeably"
+    "> - #### Terms `exchange` and `input activity` are used interchangeably\n",
+    "> - #### At the moment, only works if ecoinvent 3.3 was also imported as reference product is taken from there"
    ]
   },
   {
@@ -19,21 +20,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
     "from copy import copy\n",
-    "import os\n",
+    "import os, json\n",
     "import re\n",
     "import brightway2 as bw"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('global_settings.json', 'rb') as f:\n",
+    "    settings = json.load(f)\n",
+    "which_pc = settings['which_pc']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -538,7 +550,10 @@
     "df_raw = pd.read_excel(path, sheet_name = sheet_name, header=2)\n",
     "\n",
     "# Read data from HABE\n",
-    "path_habe = '/Users/akim/Documents/LCA files/HABE 2017/'\n",
+    "if which_pc == 'local':\n",
+    "    path_habe = '/Users/akim/Documents/LCA_files/HABE_2017/'\n",
+    "elif which_pc == 'merlin':\n",
+    "    path_habe = '/data/user/kim_a/LCA_files/HABE_2017'\n",
     "year = '091011' #121314 or 151617\n",
     "code_unit = get_units_habe(path_habe, year)\n",
     "\n",
@@ -972,7 +987,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "path = '/Users/akim/Documents/LCA files/HABE 2017/'\n",
+    "if which_pc == 'local':\n",
+    "    path = '/Users/akim/Documents/LCA_files/HABE_2017/'\n",
+    "elif which_pc == 'merlin':\n",
+    "    path = '/data/user/kim_a/LCA_files/HABE_2017'\n",
+    "    \n",
     "year = '091011' #11, 14 or 17\n",
     "get_path = lambda which_file: os.path.join( path, [f for f in os.listdir(path) if year in f and which_file in f][0] )\n",
     "path_beschrei = get_path('Datenbeschreibung')\n",
@@ -1477,6 +1496,35 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.7.4"
+  },
+  "varInspector": {
+   "cols": {
+    "lenName": 16,
+    "lenType": 16,
+    "lenVar": 40
+   },
+   "kernels_config": {
+    "python": {
+     "delete_cmd_postfix": "",
+     "delete_cmd_prefix": "del ",
+     "library": "var_list.py",
+     "varRefreshCmd": "print(var_dic_list())"
+    },
+    "r": {
+     "delete_cmd_postfix": ") ",
+     "delete_cmd_prefix": "rm(",
+     "library": "var_list.r",
+     "varRefreshCmd": "cat(var_dic_list()) "
+    }
+   },
+   "types_to_exclude": [
+    "module",
+    "function",
+    "builtin_function_or_method",
+    "instance",
+    "_Feature"
+   ],
+   "window_display": false
   }
  },
  "nbformat": 4,
