added categories to all activities, and sectors into consumption db as activities

--- a/create_consumption_database.ipynb
+++ b/create_consumption_database.ipynb
@@ -1338,25 +1338,126 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# ------------------------------------------ Part 4 ------------------------------------------"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Add categories for all activities (in English)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import brightway2 as bw\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import re"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "bw.projects.set_current('GSA for ecoinvent')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "path = 'data/es8b01452_si_002.xlsx'\n",
+    "sheet_name = 'Overview & LCA-Modeling'\n",
+    "df_raw = pd.read_excel(path, sheet_name = sheet_name, header=2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "categories_col_de = 'Original name in Swiss household budget survey'\n",
+    "categories_col_en = 'Translated name'\n",
+    "categories_raw = df_raw[[categories_col_de, categories_col_en]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "categories_raw.values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "categories = {}\n",
+    "for v in categories_raw.values:\n",
+    "    v_list_de = v[0].split(':')\n",
+    "    v_list_en = v[1].split(':')\n",
+    "    if len(v_list_de)>1 and len(v_list_de[0].split('.')) == 1:\n",
+    "        categories[v_list_de[0]] = v_list_en[0]\n",
+    "max_code_len = max({len(k) for k in categories.keys()})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "co = bw.Database('CH consumption 1.0')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "category_names_dict = {\n",
+    "    2: 'coarse',\n",
+    "    3: 'middle',\n",
+    "    4: 'fine',\n",
+    "}\n",
+    "for act in co:    \n",
+    "    code = re.sub(r'[a-z]+', '', act['code'], re.I)[:max_code_len]\n",
+    "    for i in range(2,max_code_len+1):\n",
+    "        try:\n",
+    "            category_name = 'category_' + category_names_dict[i]\n",
+    "            act[category_name] = categories[code[:i]]\n",
+    "            act.save()\n",
+    "        except:\n",
+    "            pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "co.random().as_dict()"
+   ]
   },
   {
    "cell_type": "code",
@@ -1369,107 +1470,307 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# LCA for all activities in the consumption database"
+    "# ------------------------------------------ Part 5 ------------------------------------------"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Add sectors as separate activities\n",
+    "## 1. Choose sectors"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import brightway2 as bw"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "bw.projects.set_current('GSA for ecoinvent')\n",
-    "co = bw.Database('CH consumption 1.0')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "list_functional_units = []\n",
-    "for act in co:\n",
-    "    list_functional_units.append({act.key: 1})"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "list_methods = [('IPCC 2013', 'climate change', 'GTP 100a')]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "bw.calculation_setups['all_consumption_acts'] = {'inv':list_functional_units, 'ia':list_methods}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%time\n",
-    "myMultiLCA = bw.MultiLCA('all_consumption_acts')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fus = [bw.get_activity(list(el.keys())[0])['name'] for el in list_functional_units]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "import brightway2 as bw\n",
     "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "pd.DataFrame(index=fus, columns=list_methods, data=myMultiLCA.results)"
+    "bw.projects.set_current('GSA for ecoinvent')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "co = bw.Database('CH consumption 1.0')"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "cat_option = 'category_coarse'\n",
+    "\n",
+    "cat_unique = []\n",
+    "for act in co:\n",
+    "    cat_unique.append(act.get(cat_option) or 0)\n",
+    "cat_unique = list(set(cat_unique))\n",
+    "\n",
+    "category_activities = {}\n",
+    "category_activities_len = {}\n",
+    "for cat_of_interest in cat_unique: \n",
+    "    list_ = []\n",
+    "    for act in co:\n",
+    "        if act.get(cat_option) == cat_of_interest:\n",
+    "            list_.append(act)\n",
+    "    if len(list_) > 0:\n",
+    "        category_activities[cat_of_interest] = list_\n",
+    "        category_activities_len[cat_of_interest] = len(list_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dict_ = {}\n",
+    "for cat_of_interest, activities in category_activities.items():\n",
+    "        \n",
+    "    excs_input_ag  = []\n",
+    "    excs_input_ex  = []\n",
+    "    excs_input_ec  = []\n",
+    "\n",
+    "    for act in activities:\n",
+    "        for exc in act.exchanges():\n",
+    "            if 'Agribalyse' in exc.input['database']:\n",
+    "                excs_input_ag.append(exc.input)\n",
+    "            elif 'EXIOBASE' in exc.input['database']:\n",
+    "                excs_input_ex.append(exc.input)\n",
+    "            elif 'ecoinvent 3.6 cutoff' == exc.input['database']:\n",
+    "                excs_input_ec.append(exc.input)\n",
+    "                \n",
+    "    dict_[cat_of_interest] = dict(\n",
+    "        n_activities = len(activities),\n",
+    "        n_agribalyse_exchanges = len(excs_input_ag), \n",
+    "        n_exiobase_exchanges   = len(excs_input_ex), \n",
+    "        n_ecoinvent_exchanges  = len(excs_input_ec), \n",
+    "    )\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.DataFrame.from_dict(dict_).T"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Recreation and culture': 33,\n",
+       " 'Alcoholic beverages and tobacco': 5,\n",
+       " 'Food and non-alcoholic beverages': 84,\n",
+       " 'Transport': 10,\n",
+       " 'Other insurance premiums': 1,\n",
+       " 'Premiums for life insurance': 1,\n",
+       " 'Communication': 5,\n",
+       " 'Furnishings, household equipment and routine household maintenance': 17,\n",
+       " 'Restaurants and hotels': 4,\n",
+       " 'Housing, water, electricity, gas and other fuels': 8,\n",
+       " 'Education': 1,\n",
+       " 'Fees': 1,\n",
+       " 'Clothing and footwear': 11,\n",
+       " 'Miscellaneous goods and services': 15,\n",
+       " 'Health': 4}"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "category_activities_len"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2. Add sectors"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'ch hh average consumption' (1 month of consumption, CH, None)"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "demand_act = [act for act in co if 'average' in act['name']][0]\n",
+    "demand_act"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for cat_of_interest in category_activities:\n",
+    "    # Create new bw activity with a specific name\n",
+    "    try: co.get(cat_of_interest).delete()\n",
+    "    except: pass\n",
+    "    new_act = co.new_activity(cat_of_interest, \n",
+    "                              name=cat_of_interest, \n",
+    "                              location='CH', \n",
+    "                              unit='1 month of consumption',\n",
+    "                              comment='Average consumption of one household',\n",
+    "                             )\n",
+    "    new_act.save()\n",
+    "    \n",
+    "    # Add production exchange\n",
+    "    new_act.new_exchange(\n",
+    "        input = (new_act['database'], new_act['code']),\n",
+    "        amount = 1,\n",
+    "        type = 'production'\n",
+    "    ).save()\n",
+    "    \n",
+    "    for exc in demand_act.exchanges():\n",
+    "        if exc.input.get('category_coarse')==cat_of_interest:\n",
+    "            new_act.new_exchange(\n",
+    "                input  = (exc.input['database'], exc.input['code']),\n",
+    "                amount = exc.amount,\n",
+    "                type   = 'technosphere'\n",
+    "            ).save()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3. Contribution analysis for sectors"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "list_methods = [('IPCC 2013', 'climate change', 'GTP 100a')]\n",
+    "list_fus = []\n",
+    "for cat_of_interest in category_activities:\n",
+    "    list_fus.append({co.search(cat_of_interest)[0]: 1})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bw.calculation_setups['sector_contribution_analysis'] = {'inv':list_fus, 'ia':list_methods}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 57.4 s, sys: 6.54 s, total: 1min 3s\n",
+      "Wall time: 32 s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "myMultiLCA = bw.MultiLCA('sector_contribution_analysis')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lcia_unit = bw.Method(list_methods[0]).metadata['unit']\n",
+    "\n",
+    "fus = [bw.get_activity(list(el.keys())[0])['name'][:25] for el in list_fus]\n",
+    "df = pd.DataFrame(index=fus, columns=[lcia_unit], data=myMultiLCA.results)\n",
+    "df['units'] = [bw.get_activity(list(el.keys())[0])['unit'] for el in list_fus]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.sort_values(lcia_unit, ascending=False, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                              kg CO2-Eq                   units\n",
+      "Furnishings, household eq  10354.835347  1 month of consumption\n",
+      "Miscellaneous goods and s   8327.662052  1 month of consumption\n",
+      "Health                      7220.285980  1 month of consumption\n",
+      "Recreation and culture      3732.362500  1 month of consumption\n",
+      "Clothing and footwear       2743.851365  1 month of consumption\n",
+      "Food and non-alcoholic be   2565.029437  1 month of consumption\n",
+      "Communication               1544.864364  1 month of consumption\n",
+      "Housing, water, electrici   1387.143959  1 month of consumption\n",
+      "Restaurants and hotels      1292.359141  1 month of consumption\n",
+      "Alcoholic beverages and t     42.527901  1 month of consumption\n",
+      "Other purchased transport     13.318470                     CHF\n",
+      "Fees                           7.100525                     CHF\n",
+      "Premiums for life insuran      3.311738                     CHF\n",
+      "Other insurance premiums       3.189344                     CHF\n",
+      "Education                      2.473682                     CHF\n"
+     ]
+    }
+   ],
+   "source": [
+    "with pd.option_context('display.max_rows', None, 'display.max_columns', None):  # more options can be specified also\n",
+    "    print(df)"
+   ]
   },
   {
    "cell_type": "code",
